...
      {chat && (
        <View
          style={[
            styles.chatContainer,
            chat.content.style === "inline" ? styles.chatInline : { bottom: chatBottomPosition },
          ]}
          testID="outbound-message"
        >
          <TouchableOpacity
            style={styles.chatBubble}
            onPress={() => handleClickAction(chat)}
            activeOpacity={0.9}
            testID="outbound-message-bubble"
          >
            <Text style={styles.chatText}>{chat.content.text}</Text>
            {chat.content.dismissible !== false && (
              <TouchableOpacity
                onPress={() => handleDismiss(chat)}
                style={styles.chatClose}
...
